translation changes + added more language on initial language selection

--- a/MyCity4Kids/MyCity4Kids/res/layout/choose_preferred_lang_dialog.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/choose_preferred_lang_dialog.xml
@@ -90,7 +90,7 @@
         app:fontName="oswald.ttf" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/teleguTextView"
+        android:id="@+id/teluguTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
