Groups Action tems

--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_image_poll_post_item.xml
@@ -113,10 +113,11 @@
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                 android:id="@+id/pollOption1ProgressBar"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="28dp"
                 android:layout_alignBottom="@+id/option1ImageView"
                 android:layout_alignLeft="@+id/option1ImageView"
                 android:layout_alignRight="@+id/option1ImageView"
+                android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
                 app:rcBackgroundPadding="0dp"
@@ -160,15 +161,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:background="@drawable/polls_border_bg"
                 android:src="@drawable/default_article" />
 
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                 android:id="@+id/pollOption2ProgressBar"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="28dp"
                 android:layout_alignBottom="@+id/option2ImageView"
                 android:layout_alignLeft="@+id/option2ImageView"
                 android:layout_alignRight="@+id/option2ImageView"
+                android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
                 app:rcBackgroundPadding="0dp"
@@ -228,10 +231,11 @@
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                 android:id="@+id/pollOption3ProgressBar"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="28dp"
                 android:layout_alignBottom="@+id/option3ImageView"
                 android:layout_alignLeft="@+id/option3ImageView"
                 android:layout_alignRight="@+id/option3ImageView"
+                android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
                 app:rcBackgroundPadding="0dp"
@@ -281,10 +285,11 @@
             <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
                 android:id="@+id/pollOption4ProgressBar"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="28dp"
                 android:layout_alignBottom="@+id/option4ImageView"
                 android:layout_alignLeft="@+id/option4ImageView"
                 android:layout_alignRight="@+id/option4ImageView"
+                android:layout_margin="1dp"
                 android:visibility="gone"
                 app:rcBackgroundColor="@color/white"
                 app:rcBackgroundPadding="0dp"
