--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_cell_test.xml
@@ -28,7 +28,7 @@
             android:visibility="visible" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvCommentTitle"
+            android:id="@+id/commentorUsernameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
@@ -46,12 +46,12 @@
             app:fontName="oswald_regular.ttf" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/txvCommentDescription"
+            android:id="@+id/commentDataTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txvCommentTitle"
-            android:layout_alignStart="@+id/txvCommentTitle"
-            android:layout_below="@id/txvCommentTitle"
+            android:layout_alignLeft="@+id/commentorUsernameTextView"
+            android:layout_alignStart="@+id/commentorUsernameTextView"
+            android:layout_below="@id/commentorUsernameTextView"
             android:layout_marginTop="8dp"
             android:ellipsize="end"
             android:paddingLeft="5dp"
@@ -63,11 +63,12 @@
             app:fontName="open_sans.ttf" />
 
         <LinearLayout
+            android:id="@+id/dateContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/txvCommentTitle"
-            android:layout_alignStart="@+id/txvCommentTitle"
-            android:layout_below="@+id/txvCommentDescription"
+            android:layout_alignLeft="@+id/commentorUsernameTextView"
+            android:layout_alignStart="@+id/commentorUsernameTextView"
+            android:layout_below="@+id/commentDataTextView"
             android:orientation="horizontal">
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -92,7 +93,88 @@
                 android:textSize="@dimen/ad_comments_date"
                 app:fontName="oswald.ttf" />
         </LinearLayout>
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/replyCountTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/dateContainer"
+            android:layout_below="@id/dateContainer"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:visibility="gone"
+            android:text="View All Replies" />
+        <!--<RelativeLayout-->
+        <!--android:id="@+id/replyRelativeLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignLeft="@+id/dateContainer"-->
+        <!--android:layout_below="@id/dateContainer"-->
+        <!--android:visibility="visible">-->
+
+        <!---->
+
+        <!--<com.mikhaellopez.circularimageview.CircularImageView-->
+        <!--android:id="@+id/replyUserImageView"-->
+        <!--android:layout_width="34dp"-->
+        <!--android:layout_height="34dp"-->
+        <!--android:layout_marginBottom="5dp"-->
+        <!--android:layout_marginLeft="14dp"-->
+        <!--android:layout_marginRight="5dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:src="@drawable/default_commentor_img"-->
+        <!--app:civ_border="true"-->
+        <!--app:civ_border_color="@color/white_color"-->
+        <!--app:civ_border_width="0dp"-->
+        <!--app:civ_shadow="true"-->
+        <!--app:civ_shadow_color="@color/grey"-->
+        <!--app:civ_shadow_radius="4" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/replyUserNameTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_toRightOf="@+id/replyUserImageView"-->
+        <!--android:ellipsize="marquee"-->
+        <!--android:maxLines="1"-->
+        <!--android:maxWidth="150dp"-->
+        <!--android:text="user d wad d dijiaw dawj9iad ikad"-->
+        <!--android:textColor="@color/black_color"-->
+        <!--android:textSize="14sp" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/replied"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignBottom="@+id/replyUserNameTextView"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_toRightOf="@+id/replyUserNameTextView"-->
+        <!--android:fontFamily="sans-serif-thin"-->
+        <!--android:paddingLeft="8dp"-->
+        <!--android:text="Replied"-->
+        <!--android:textColor="@color/black_color"-->
+        <!--android:textSize="12sp" />-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/replyCountTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:fontFamily="sans-serif-thin"-->
+        <!--android:paddingLeft="5dp"-->
+        <!--android:paddingRight="10dp"-->
+        <!--android:text="REPLIES"-->
+        <!--android:textColor="@color/black_color"-->
+        <!--android:textSize="12sp" />-->
+        <!--</RelativeLayout>-->
     </RelativeLayout>
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <View
         android:id="@+id/underlineView"
@@ -101,6 +183,6 @@
         android:layout_below="@+id/relativeMainContainer"
         android:layout_marginTop="10dp"
         android:background="@color/grey_light"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
 </RelativeLayout>
