--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_replies_dialog.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_comment_replies_dialog.xml
@@ -27,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/city_picker.toolbar.title"
+                android:text="Replies"
                 android:textColor="@color/city_picker.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -45,22 +45,23 @@
     <com.mycity4kids.widget.CustomFontEditText
         android:id="@+id/writeCommentEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/addCommentImageView"
-        android:hint="Write a comment" />
+        android:background="@null"
+        android:hint="Add a"
+        android:textColor="@color/groups.light_black_color" />
 
     <ImageView
         android:id="@+id/addCommentImageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/writeCommentEditText"
-        android:background="@color/white"
+        android:background="@color/groups.blue_color"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:src="@drawable/ic_play_tts" />
+        android:src="@drawable/ic_gp_add_response" />
 
     <View
         android:id="@+id/topLineView"
