--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
@@ -46,24 +46,110 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/addCommentImageView"
-        android:hint="Write a comment" />
+        android:background="@null"
+        android:hint="Add a reply"
+        android:minHeight="48dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:textColor="@color/groups.light_black_color" />
 
     <ImageView
         android:id="@+id/addCommentImageView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="49dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/writeCommentEditText"
-        android:background="@color/black"
+        android:background="@color/groups.blue_color"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:src="@drawable/ic_play_tts" />
+        android:src="@drawable/ic_gp_add_response" />
 
     <View
         android:id="@+id/topLineView"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_above="@+id/writeCommentEditText"
+        android:layout_toLeftOf="@+id/addCommentImageView"
         android:background="@color/light_underline" />
+
+    <RelativeLayout
+        android:id="@+id/postSettingsContainerMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="6dp"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/overlayView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:alpha="0.85"
+            android:background="#121212"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/postSettingsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/savePostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/notificationToggleTextView"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="SAVE POST"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/notificationToggleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/commentToggleTextView"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="SAVE POST"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/commentToggleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/reportPostTextView"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="DISABLE COMMENT"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/reportPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawableLeft="@drawable/ic_bookmark"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="REPORT POST"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
