--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -363,7 +363,7 @@
                 android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="DISABLE COMMENT"
+                android:text="DISABLE COMMENTS"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
@@ -382,6 +382,7 @@
                 app:fontName="open_sans.ttf" />
         </LinearLayout>
     </RelativeLayout>
+
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/noPostsTextView"
         android:layout_width="match_parent"
@@ -406,7 +407,6 @@
         app:fab_colorNormal="@color/groups.blue_color"
         app:fab_colorPressed="@color/groups.blue_color"
         app:fab_icon="@drawable/ic_plus" />
-
 
     <ProgressBar
         android:id="@+id/progressBar"
