--- a/MyCity4Kids/MyCity4Kids/res/layout/group_member_listing_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_member_listing_activity.xml
@@ -34,50 +34,16 @@
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/groupMembersRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/topLineView"
-        android:layout_below="@+id/toolbar" />
-
-    <com.mycity4kids.widget.CustomFontEditText
-        android:id="@+id/writeCommentEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/addCommentImageView"
-        android:background="@null"
-        android:hint="Add a reply"
-        android:minHeight="48dp"
-        android:paddingLeft="6dp"
-        android:paddingRight="6dp"
-        android:textColor="@color/groups.light_black_color" />
-
-    <ImageView
-        android:id="@+id/addCommentImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="49dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@color/groups.blue_color"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:src="@drawable/ic_gp_add_response" />
-
-    <View
-        android:id="@+id/topLineView"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@+id/writeCommentEditText"
-        android:layout_toLeftOf="@+id/addCommentImageView"
-        android:background="@color/light_underline" />
+        android:layout_height="match_parent" />
 
     <RelativeLayout
         android:id="@+id/postSettingsContainerMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:elevation="6dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <View
             android:id="@+id/overlayView"
@@ -86,7 +52,7 @@
             android:layout_alignParentTop="true"
             android:alpha="0.85"
             android:background="#121212"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/postSettingsContainer"
@@ -94,59 +60,28 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/savePostTextView"
+                android:id="@+id/inviteModeratorTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/notificationToggleTextView"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
-                android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="SAVE POST"
+                android:text="Invite To Be A Moderator"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/notificationToggleTextView"
+                android:id="@+id/blockToggleTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/commentToggleTextView"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
-                android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="SAVE POST"
-                android:textColor="@color/groups.light_black_color"
-                android:textSize="16sp"
-                app:fontName="open_sans.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/commentToggleTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/reportPostTextView"
-                android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
-                android:drawablePadding="20dp"
-                android:padding="20dp"
-                android:text="DISABLE COMMENTS"
-                android:textColor="@color/groups.light_black_color"
-                android:textSize="16sp"
-                app:fontName="open_sans.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/reportPostTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
-                android:drawablePadding="20dp"
-                android:padding="20dp"
-                android:text="REPORT POST"
+                android:text="Block Member/Unblock"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
