--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -118,7 +118,7 @@
         android:id="@+id/dotIndicatorView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/downvoteTextView"
+        android:layout_alignTop="@+id/downvoteContainer"
         android:layout_below="@id/pager"
         android:layout_centerHorizontal="true"
         app:bpi_fillColor="@color/groups.blue_color"
@@ -128,35 +128,88 @@
         app:bpi_radius="3dp"
         app:bpi_risingCount="3" />
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/upvoteTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/postDataViewPager"
-        android:layout_marginTop="15dp"
-        android:drawableLeft="@drawable/fav_icon"
-        android:drawablePadding="5dp"
-        android:gravity="bottom"
-        android:text="20 Helpful"
-        android:textColor="@color/ad.comment.date"
-        android:textSize="10sp"
-        app:fontName="oswald.ttf" />
+    <!--<com.mycity4kids.widget.CustomFontTextView-->
+    <!--android:id="@+id/upvoteTextView"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/postDataViewPager"-->
+    <!--android:layout_marginTop="15dp"-->
+    <!--android:drawableLeft="@drawable/fav_icon"-->
+    <!--android:drawablePadding="5dp"-->
+    <!--android:gravity="bottom"-->
+    <!--android:text="20 Helpful"-->
+    <!--android:textColor="@color/ad.comment.date"-->
+    <!--android:textSize="10sp"-->
+    <!--app:fontName="oswald.ttf" />-->
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/downvoteTextView"
+    <!--<com.mycity4kids.widget.CustomFontTextView-->
+    <!--android:id="@+id/downvoteTextView"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/postDataViewPager"-->
+    <!--android:layout_marginLeft="5dp"-->
+    <!--android:layout_marginTop="15dp"-->
+    <!--android:layout_toRightOf="@+id/upvoteTextView"-->
+    <!--android:drawableLeft="@drawable/fav_icon"-->
+    <!--android:drawablePadding="5dp"-->
+    <!--android:gravity="bottom"-->
+    <!--android:text="0 Not Helpful"-->
+    <!--android:textColor="@color/ad.comment.date"-->
+    <!--android:textSize="10sp"-->
+    <!--app:fontName="oswald.ttf" />-->
+    <LinearLayout
+        android:id="@+id/upvoteContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/postDataViewPager"
-        android:layout_marginLeft="5dp"
         android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/upvoteTextView"
-        android:drawableLeft="@drawable/fav_icon"
-        android:drawablePadding="5dp"
-        android:gravity="bottom"
-        android:text="0 Not Helpful"
-        android:textColor="@color/ad.comment.date"
-        android:textSize="10sp"
-        app:fontName="oswald.ttf" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/upvoteImageVIew"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_upvote" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/upvoteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:text="20 Helpful"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            app:fontName="oswald.ttf" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/downvoteContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/postDataViewPager"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_toRightOf="@+id/upvoteContainer"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/downvoteImageVIew"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_downvote" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/downvoteTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:text="20 Helpful"
+            android:textColor="@color/groups.grey"
+            android:textSize="12sp"
+            app:fontName="oswald.ttf" />
+    </LinearLayout>
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/postCommentsTextView"
@@ -164,16 +217,43 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/postDataViewPager"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_toLeftOf="@+id/shareTextView"
-        android:drawablePadding="5dp"
-        android:drawableRight="@drawable/ic_comments"
+        android:layout_marginTop="10dp"
+        android:layout_toLeftOf="@+id/addCommentImageView"
         android:gravity="bottom"
         android:padding="5dp"
-        android:text="20"
-        android:textColor="@color/ad.comment.date"
-        android:textSize="10sp"
+        android:text="20 Comments"
+        android:textColor="@color/groups.blue_color"
+        android:textSize="12sp"
         app:fontName="oswald.ttf" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/addCommentImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/postDataViewPager"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="10dp"
+        android:layout_toLeftOf="@+id/shareTextView"
+        android:padding="5dp"
+        android:src="@drawable/ic_comments"
+        android:tint="@color/groups.blue_color" />
+
+    <!--<com.mycity4kids.widget.CustomFontTextView-->
+        <!--android:id="@+id/postCommentsTextView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/postDataViewPager"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:layout_marginTop="15dp"-->
+        <!--android:layout_toLeftOf="@+id/shareTextView"-->
+        <!--android:drawablePadding="5dp"-->
+        <!--android:drawableRight="@drawable/ic_comments"-->
+        <!--android:gravity="bottom"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="20"-->
+        <!--android:textColor="@color/ad.comment.date"-->
+        <!--android:textSize="10sp"-->
+        <!--app:fontName="oswald.ttf" />-->
 
     <ImageView
         android:id="@+id/shareTextView"
@@ -181,7 +261,7 @@
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/postDataViewPager"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:paddingBottom="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
