--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_summary_activity.xml
@@ -128,7 +128,7 @@
                 android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="DISABLE COMMENT"
+                android:text="DISABLE COMMENTS"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
