--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_text_post_item.xml
@@ -10,7 +10,7 @@
     android:paddingRight="10dp"
     android:paddingTop="8dp">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/userImageView"
         android:layout_width="@dimen/ad_comments_profile_pic_width"
         android:layout_height="@dimen/ad_comments_profile_pic_width"
@@ -19,7 +19,10 @@
         android:layout_alignParentTop="true"
         android:contentDescription="@string/author_img"
         android:src="@drawable/default_commentor_img"
-        android:visibility="visible" />
+        app:civ_border="true"
+        app:civ_border_color="@color/line_separator_color"
+        app:civ_border_width="1px"
+        app:civ_shadow="false" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/usernameTextView"
@@ -158,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/postDataTextView"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/addCommentImageView"
         android:gravity="bottom"
