--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_media_post_item.xml
@@ -6,19 +6,23 @@
     android:layout_marginBottom="16dp"
     android:background="@color/white_color"
     android:paddingBottom="4dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:paddingTop="8dp">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/userImageView"
         android:layout_width="@dimen/ad_comments_profile_pic_width"
         android:layout_height="@dimen/ad_comments_profile_pic_width"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
         android:contentDescription="@string/author_img"
         android:src="@drawable/default_commentor_img"
-        android:visibility="visible" />
+        app:civ_border="true"
+        app:civ_border_color="@color/line_separator_color"
+        app:civ_border_width="1px"
+        app:civ_shadow="false" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/usernameTextView"
@@ -216,7 +220,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/postDataViewPager"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:layout_toLeftOf="@+id/addCommentImageView"
         android:gravity="bottom"
@@ -239,21 +243,21 @@
         android:tint="@color/groups.blue_color" />
 
     <!--<com.mycity4kids.widget.CustomFontTextView-->
-        <!--android:id="@+id/postCommentsTextView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_below="@+id/postDataViewPager"-->
-        <!--android:layout_marginRight="10dp"-->
-        <!--android:layout_marginTop="15dp"-->
-        <!--android:layout_toLeftOf="@+id/shareTextView"-->
-        <!--android:drawablePadding="5dp"-->
-        <!--android:drawableRight="@drawable/ic_comments"-->
-        <!--android:gravity="bottom"-->
-        <!--android:padding="5dp"-->
-        <!--android:text="20"-->
-        <!--android:textColor="@color/ad.comment.date"-->
-        <!--android:textSize="10sp"-->
-        <!--app:fontName="oswald.ttf" />-->
+    <!--android:id="@+id/postCommentsTextView"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_below="@+id/postDataViewPager"-->
+    <!--android:layout_marginRight="10dp"-->
+    <!--android:layout_marginTop="15dp"-->
+    <!--android:layout_toLeftOf="@+id/shareTextView"-->
+    <!--android:drawablePadding="5dp"-->
+    <!--android:drawableRight="@drawable/ic_comments"-->
+    <!--android:gravity="bottom"-->
+    <!--android:padding="5dp"-->
+    <!--android:text="20"-->
+    <!--android:textColor="@color/ad.comment.date"-->
+    <!--android:textSize="10sp"-->
+    <!--app:fontName="oswald.ttf" />-->
 
     <ImageView
         android:id="@+id/shareTextView"
